Destroy GamepadDataFetchers on the polling thread.

GamepadPlatformDataFetcherLinux encapsulates a
FileDescriptorWatcher::Controller whose destructor needs to be called
on the same sequence as its constructor. This decision was discussed
in the design doc for FileDescriptorWatcher
https://docs.google.com/document/d/1F5CjON2JNtCtdEug3LOL8-avj188k_xOgqzdv288Q_s/edit?usp=sharing

BUG=663950

Review-Url: https://codereview.chromium.org/2491943002
Cr-Commit-Position: refs/heads/master@{#431372}

Former-commit-id: f982e5aa10e88c9b0656ec751d47205d873069c2